SET(ARCH scamp5)
add_executable(${ARCH} main.cpp scamp5.h scamp5.cpp analognet2/conv_instructions.h analognet2/fc_weights.h analognet2/analog_main.h analognet2/analog_main.cpp)
if (WIN32)
    string(TOUPPER ${CMAKE_BUILD_TYPE} CMAKE_BUILD_TYPE)
    if (CMAKE_BUILD_TYPE STREQUAL "DEBUG")
        target_link_libraries(${ARCH} PRIVATE ${CONAN_LIBS} ${OpenCV_libs} simulator opencv_world451d)
    ELSEIF (CMAKE_BUILD_TYPE STREQUAL "RELEASE")
        target_link_libraries(${ARCH} PRIVATE ${CONAN_LIBS} ${OpenCV_libs} simulator opencv_world451)
    ENDIF ()
ELSEIF (UNIX)
    target_link_libraries(${ARCH} PRIVATE ${CONAN_LIBS} ${OpenCV_LIBS} simulator)
ENDIF ()
target_include_directories(${ARCH} PUBLIC ${OpenCV_INCLUDE_DIRS} include)